support-files/codecc/k8s/deploy_yaml/base/ingress_codecc.yaml
#修改下面的host
#复制该文件,命名为ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bkcodecc-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: __BK_CODECC_FQDN__    #与bkenv.properties的BKCI_FQDN一致
      http:
        paths:
          - path: /
            backend:
              serviceName: bkci-codecc-gateway
              servicePort: 80
